// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`inline 1`] = `
Object {
  "Options": Object {
    "ID": "component",
    "content": "content from options",
    "title": "title from options",
  },
  "html": "
<main>
  <div>title from options</div>
  <div>content from options</div>
</main>
",
}
`;

exports[`inline 2`] = `
Object {
  "Options": Object {
    "ID": "component",
    "content": "new content",
    "title": "new title",
  },
  "html": "
<main>
  <div>new title</div>
  <div>new content</div>
</main>
",
}
`;

exports[`inline with mappings 1`] = `
Object {
  "Options": Object {
    "ID": "component",
    "content": "content from options",
    "title": "title from options",
  },
  "html": "
<h1>title from options</h1>
<!--0-->
<main>
  <div>title from options</div>
  <div>content from options</div>
</main>
",
}
`;

exports[`inline with mappings 2`] = `
Object {
  "Options": Object {
    "ID": "component",
    "content": "new content",
    "title": "new title",
  },
  "html": "
<h1>new title</h1>
<!--0-->
<main>
  <div>new title</div>
  <div>new content</div>
</main>
",
}
`;

exports[`sfc 1`] = `
Object {
  "Options": Object {
    "ID": "component",
    "content": "content from sfc options",
    "title": "title from sfc options",
  },
  "html": "
<div>title from sfc options</div>
<div>content from sfc options</div>
",
}
`;

exports[`sfc 2`] = `
Object {
  "Options": Object {
    "ID": "component",
    "content": "new sfc content",
    "title": "new sfc title",
  },
  "html": "
<div>new sfc title</div>
<div>new sfc content</div>
",
}
`;

exports[`sfc with mappings 1`] = `
Object {
  "Options": Object {
    "ID": "component",
    "content": "content from sfc options",
    "title": "title from sfc options",
  },
  "html": "
<header>title from sfc options</header>
<!--0-->
<div>title from sfc options</div>
<div>content from sfc options</div>
",
}
`;

exports[`sfc with mappings 2`] = `
Object {
  "Options": Object {
    "ID": "component",
    "content": "new sfc content",
    "title": "new sfc title",
  },
  "html": "
<header>new sfc title</header>
<!--0-->
<div>new sfc title</div>
<div>new sfc content</div>
",
}
`;
